tests/NormalTests/paczka1/small_fuzzy/46121710.err
Error in line 7: Dcl6V7r A10 25,5
Error in line 9: 1YK A10 55,4
Error in line 8: Dcl6V7r S769 10,3
